refactor: bind, improve code readability